--- a/pid-reservations/src/main/resources/templates/artist/index.html
+++ b/pid-reservations/src/main/resources/templates/artist/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr" xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
       layout:decorate="~{layouts/main}">
 <head>
@@ -18,7 +19,7 @@
             <tr>
                 <th>Firstname</th>
                 <th>Lastname</th>
-                <th colspan="2">Actions</th>
+                <th colspan="3">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -27,10 +28,18 @@
                 <td th:text="${artist.lastname}">Sull</td>
                 <td><a th:href="@{/artists/{id}(id=${artist.id})}">View</a></td>
                 <td><a th:href="@{/artists/{id}/edit(id=${artist.id})}">Edit</a></td>
+                <td>
+                    <form th:id="|deleteForm-${artist.id}|"
+                          th:action="@{/artists/{id}(id=${artist.id})}" th:method="delete">
+                        <a href="#"
+                           th:onclick="|if(confirm('Confirm delete artist #${artist.id}'))
+	                    		document.getElementById('deleteForm-${artist.id}').submit();
+	                    		return false;|">Delete</a>
+                    </form>
+                </td>
             </tr>
             </tbody>
         </table>
-
     </div>
 </div>
 </body>
